--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </style>
 </head>
 <body>
+    xcgn
     <h1>Рекомендуется играть в альбомном формате</h1>
     <div id="container" style="height: 880px; width: 1900px;">
         <iframe id="frame" src="https://s3-eu-west-1.amazonaws.com/apps.playcanvas.com/R2axJfsc/index.html" webkitallowfullscreen="true" mozallowfullscreen="true" allow="autoplay" allowfullscreen="true" allowvr scrolling="no" frameborder="0" style="height: 880px; width: 1900px;">
